[metadata]
name = btl-cd-release-test
version = 0.0.1.dev0
description = Blockchain-Technology-Lab Consensus Decentralization Tool
author = TBD
author_email = TBD
long_description = file: README.md
long_description_content_type: text/markdown
keywords =
    Blockchain Technology Lab, Consensus, Decentralization
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Information Technology
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
url = https://github.com/Blockchain-Technology-Lab/consensus-decentralization/

[options]
# Needed to include all non-python files in the archive
# This is in addition of MANIFEST.in file
include_package_data = True
packages =
    consensus_decentralization
    consensus_decentralization.mappings
    consensus_decentralization.metrics
    consensus_decentralization.parsers
python_requires = >=3.8
# package_dir =
#    some_pack_dir = path
# scripts =
#     script/path/bin
install_requires = file: requirements.txt

#[options.entry_points]
                   #console_scripts =
#    cli-name = cli.main:function_to_launch

[options.packages.find]
where = .

## Plugin used for package release.
## More information : https://zestreleaser.readthedocs.io/en/latest/
[zest.releaser]
create-wheel = yes
tag-format = {version}
prefix-message = [TOOLS] 🤖 [ci skip]
date-format = %%Y-%%m-%%d %%H:%%M:%%S
